create and list products in Swagger
