# APIS/internal/infra/webserver/handlers/product_handlers.go
@@ -20,6 +20,18 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	return &ProductHandler{ProductDB: db}
 }
 
+// CreateProduct godoc
+//
+//	@Summary		Create a new product
+//	@Description	Create a new product with the input payload
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body	dto.CreateProductInput	true	"product request"
+//	@Success		201
+//	@Failure		500	{object}	error
+//	@Router			/products [post]
+//	@Security		ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -57,6 +69,19 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(product)
 }
 
+// GetProducts godoc
+//	@Summary		List all products
+//	@Description	Get all products
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			page	query		string	false	"page number"
+//	@Param			limit	query		string	false	"limit"
+//	@Success		200		{array}		entity.Product
+//	@Failure		404		{object}	Error
+//	@Failure		500		{object}	Error
+//	@Router			/products [get]
+//	@Security		ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
